Frontend : Updated index, home, Myorders, products modules. Backend : added UserInteraction model,repo,controller and updated productrepo and controller.

--- a/Next-Gen-Smart-Shopping-Platform/app/index.html
+++ b/Next-Gen-Smart-Shopping-Platform/app/index.html
@@ -162,6 +162,13 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <!-- Recommended Products Section -->
+    <div class="container mt-5">
+      <h3 class="mb-4">Recommended for You</h3>
+      <div id="recommendations" class="row g-4">
+        <!-- Cards will be injected here by JS -->
+      </div>
+    </div>
     <script type="module" src="./index.js"></script>
     <script src="../resources/bootstrap/js/bootstrap.min.js"></script>
   </body>
